--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vam </h1>
-        <p>Y.. </p>
+        <div id = "container">
+            <div id = "post">
+                <h1>Este es el título del post</h1>
+                <p> Y este es el primer párrafo de inicio</p>
+            </div>
+        </div>
     </body>
 </html>
