--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id = "container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id = "post">
                 <h1>Este es el título del post</h1>
                 <p> Y este es el primer párrafo de inicio</p>
