Agregado el contenido adicional del blog y Courier

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
             <div id = "post">
                 <h1>Este es el título del post</h1>
                 <p> Y este es el primer párrafo de inicio</p>
+                <p>ParrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafo
+                ParrafoParrafoParrafoParrafo
+                ParrafoParrafoParrafo.</p>
             </div>
         </div>
     </body>
