--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id = "container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id = "post">
                 <h1>Este es el título del post</h1>
@@ -15,6 +15,7 @@
                 <p>ParrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafo
                 ParrafoParrafoParrafoParrafo
                 ParrafoParrafoParrafo.</p>
+                <p>Suscribeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
             </div>
         </div>
     </body>
