--- a/blogpost.html
+++ b/blogpost.html
@@ -13,10 +13,10 @@
             <div id = "post">
                 <h1>Este es el título del post</h1>
                 <p> Y este es el primer párrafo de inicio</p>
-                <p>ParrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafo
+                <p>PáááááááááárrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafoParrafo
                 ParrafoParrafoParrafoParrafo
                 ParrafoParrafoParrafo.</p>
-                <p>Suscribeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
+                <p>Suscribeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeete</p>
             </div>
 	        <div id = "footer">
 		        Hecho con amor en platzi
