Agregué una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 ParrafoParrafoParrafoParrafo
                 ParrafoParrafoParrafo.</p>
                 <p>Suscribeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeete</p>
+                <img id="img1" src="Imagenes/4502655.jpg" />
             </div>
 	        <div id = "footer">
 		        Hecho con amor en platzi
